# pywebhdfs

./: AUTHORS  ChangeLog  setup.cfg  setup.py
example/: example.py
gavialwebhdfs/: webhdfs.py
tests/: test_errors.py  test_webhdfs.py
