[metadata]
name = gavialwebhdfs
version = 0.4.2
description =
    Python wrapper for the Hadoop WebHDFS REST API
description-file =
    README.rst
author = Steven D. Gonzales
author-email = stevendgonzales@gmail.com
home-page = http://pywebhdfs.org/
url = https://github.com/mlog-engineer/pywebhdfs
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4

[nosetests]
nocapture=1
cover-package=gavialwebhdfs
cover-erase=1

[flake8]
exclude = .git,.idea,.tox,dist

[build_sphinx]
source-dir = docs/source
build-dir  = docs/build
all_files  = 1

[upload_sphinx]
upload-dir = docs/build/html
